# MentorsMind-Contract

./: .gitignore  BLOCKCHAIN_ISSUES.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  LOCAL_DEVELOPMENT.md  MIGRATION_TELEMETRY_IMPLEMENTATION.md  MILESTONE_IMPLEMENTATION.md  PR_MIGRATION_TELEMETRY.md  README.md  VERSION_POLICY.md  build_error.txt  build_error2.txt  check_error.txt  docker-compose.yml  kyc_build_error.txt  package-lock.json  package.json  test_no_run_error.txt  wasm_build_error.txt
.github/workflows/: contracts.yml  sdk-generation.yml
contracts/allowance/: Cargo.toml
contracts/badges/: Cargo.toml
contracts/bridge_receiver/: Cargo.toml  lib.rs
contracts/credit_score/: Cargo.toml
contracts/endorsements/: Cargo.toml
contracts/escrow_factory/: Cargo.toml  README.md
contracts/forum/: Cargo.toml  README.md
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/governance/test_snapshots/tests/: test_double_vote_prevention.1.json  test_full_proposal_lifecycle.1.json  test_quorum_failure.1.json
contracts/health_dashboard/: Cargo.toml
contracts/interface_registry/: Cargo.toml
contracts/isa/: Cargo.toml
contracts/kyc_registry/: Cargo.toml
contracts/mnt-token/: Cargo.toml
contracts/oracle/: Cargo.toml
contracts/payment_router/: Cargo.toml
contracts/performance_bond/: Cargo.toml
contracts/rate_limiter/: Cargo.toml
contracts/session_nft/: Cargo.toml
contracts/session_nft/src/: lib.rs
contracts/shared/: Cargo.toml
contracts/streak_rewards/: Cargo.toml
deployed/: local.json
docs/: composability-guide.md  state-machines.md  storage-guide.md
escrow/: CHANGELOG.md  Cargo.toml
escrow/src/: lib.rs
escrow/test_snapshots/: test_admin_release.1.json  test_over_release_panics.1.json  test_page_size_cap.1.json  test_query_by_learner_pagination.1.json  test_query_by_mentor_pagination.1.json  test_query_by_status.1.json  test_release_partial.1.json  test_resolve_dispute_to_learner.1.json  test_resolve_dispute_to_mentor.1.json  test_session_id_uniqueness.1.json  test_three_session_package_full_lifecycle.1.json  test_try_auto_release.1.json
escrow/test_snapshots/test/: test_amount_max_i128_overflow_protection.1.json  test_approved_token_accepted.1.json  test_auto_release_default_72h_delay.1.json  test_auto_release_fails_if_already_released.1.json  test_auto_release_fails_if_disputed.1.json  test_auto_release_fields_stored_on_escrow.1.json  test_auto_release_permissionless_any_caller_can_trigger.1.json  test_auto_release_rejected_before_delay.1.json  test_auto_release_triggers_after_delay.1.json  test_auto_release_triggers_exactly_at_boundary.1.json  test_cannot_dispute_non_active_escrow.1.json  test_cannot_refund_released.1.json  test_cannot_refund_resolved.1.json  test_cannot_release_twice.1.json  test_custom_auto_release_delay_stored.1.json  test_default_auto_release_delay.1.json  test_dispute_by_learner_stores_reason.1.json  test_dispute_by_mentor_stores_reason.1.json  test_dispute_by_unauthorized_rejected.1.json  test_escrow_counter_increments_correctly.1.json  test_fee_five_percent.1.json  test_fee_goes_to_updated_treasury.1.json  test_fee_rounding_truncates_toward_zero.1.json  test_fee_ten_percent.1.json  test_fee_zero_percent.1.json  test_initialize_and_prevent_reinit.1.json  test_initialize_fee_over_cap_rejected.1.json  test_insufficient_balance_rejected.1.json  test_negative_amount_rejected.1.json  test_refund_after_dispute.1.json  test_refund_by_admin.1.json  test_release_funds_by_admin.1.json  test_release_funds_by_learner.1.json  test_release_funds_unauthorized.1.json  test_resolve_dispute_0_100_all_to_learner.1.json  test_resolve_dispute_100_0_all_to_mentor.1.json  test_resolve_dispute_50_50_equal_split.1.json  test_resolve_dispute_cannot_resolve_twice.1.json  test_resolve_dispute_dispute_reason_preserved.1.json  test_resolve_dispute_only_works_on_disputed.1.json  (+12 more)
escrow/tests/: escrow_test.rs
mentorminds-backend/: package-lock.json  package.json
multisig/: Cargo.toml
multisig/src/: lib.rs
scripts/: deploy-multisig.sh  seed-local.sh  setup-local.bat  setup-local.sh  upgrade.sh
stream/: Cargo.toml
stream/src/: lib.rs  types.rs
stream/test_snapshots/test/: test_create_stream_v1.1.json  test_create_stream_v1_invalid_amount.1.json  test_create_stream_v1_invalid_time.1.json  test_initialize.1.json  test_migrate_stream_already_migrated.1.json  test_migrate_stream_not_found.1.json  test_migrate_stream_success.1.json  test_migrate_stream_unauthorized.1.json  test_migrate_stream_with_claimed_amount.1.json  test_migration_event_contains_correct_remaining_balance.1.json  test_migration_event_contains_correct_v1_id.1.json  test_migration_event_with_partial_claimed_amount.1.json  test_multiple_migrations_create_separate_v2_streams.1.json  test_v1_stream_marked_as_migrated.1.json
tests/: Cargo.toml  benchmarks.rs  integration_test.rs  state_machine_tests.rs  upgrade_test.rs
tests/interoperability/: escrow_compliance.rs  escrow_token.rs  governance_chain.rs  health_dashboard.rs  lending_credit.rs  mocks.rs  mod.rs  reputation_escrow.rs
tests/test_snapshots/: test_auto_release_after_session_end.1.json  test_event_order_full_lifecycle.1.json  test_full_session_lifecycle.1.json  test_gold_tier_fee_300_bps.1.json  test_multiple_sessions_tracked_independently.1.json  test_referral_reward_after_first_session.1.json  test_reputation_reads_escrow_status.1.json  test_rollback_double_release_leaves_state_intact.1.json  test_rollback_when_verification_revoked_before_release.1.json  test_staking_tier_verified_vs_unverified.1.json  test_upgrade_path_preserves_storage_and_enables_new_features.1.json
(+122 files in other folders)
