[workspace]
resolver = "2"
members = [
    "escrow",
    "contracts/allowance",
    "contracts/interface_registry",
    "contracts/verification",
    "contracts/oracle",
    "contracts/payment_router",
    "contracts/referral",
    "contracts/session_nft",
    "contracts/staking",
    "contracts/subscription_analytics",
    "contracts/timelock",
    "contracts/treasury",
    "contracts/verification",
    "contracts/vesting",
    "contracts/payment_router",
    "contracts/streak_rewards",
    "contracts/health_dashboard",
    "tests",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[workspace.dependencies]
soroban-sdk = "21.0.0"
soroban-token-sdk = "21.0.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
