[package]
name = "mentorminds-escrow"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
# soroban-token-sdk exposes the SEP-41 TokenInterface trait used for
# on-chain token allowlist validation and balance queries.
soroban-token-sdk = { workspace = true }
shared = { path = "../contracts/shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true